# reglaze-engine

./: .gitignore  CMakeLists.txt  README.md  shell.nix
.ccls-cache/@@home@xayler@projects@reglaze-engine/: @nix@store@4xqa6mk1lllnsprl2swlw94vczzn02y9-clang-19.1.7-lib@lib@clang@19@include@__stdarg___gnuc_va_list.h.blob  @nix@store@4xqa6mk1lllnsprl2swlw94vczzn02y9-clang-19.1.7-lib@lib@clang@19@include@__stddef_header_macro.h.blob  @nix@store@4xqa6mk1lllnsprl2swlw94vczzn02y9-clang-19.1.7-lib@lib@clang@19@include@__stddef_max_align_t.h.blob  @nix@store@4xqa6mk1lllnsprl2swlw94vczzn02y9-clang-19.1.7-lib@lib@clang@19@include@__stddef_null.h.blob  @nix@store@4xqa6mk1lllnsprl2swlw94vczzn02y9-clang-19.1.7-lib@lib@clang@19@include@__stddef_nullptr_t.h.blob  @nix@store@4xqa6mk1lllnsprl2swlw94vczzn02y9-clang-19.1.7-lib@lib@clang@19@include@__stddef_offsetof.h.blob  @nix@store@4xqa6mk1lllnsprl2swlw94vczzn02y9-clang-19.1.7-lib@lib@clang@19@include@__stddef_ptrdiff_t.h.blob  @nix@store@4xqa6mk1lllnsprl2swlw94vczzn02y9-clang-19.1.7-lib@lib@clang@19@include@__stddef_size_t.h.blob  @nix@store@4xqa6mk1lllnsprl2swlw94vczzn02y9-clang-19.1.7-lib@lib@clang@19@include@__stddef_wchar_t.h.blob  @nix@store@4xqa6mk1lllnsprl2swlw94vczzn02y9-clang-19.1.7-lib@lib@clang@19@include@limits.h.blob  @nix@store@4xqa6mk1lllnsprl2swlw94vczzn02y9-clang-19.1.7-lib@lib@clang@19@include@stdarg.h.blob  @nix@store@4xqa6mk1lllnsprl2swlw94vczzn02y9-clang-19.1.7-lib@lib@clang@19@include@stddef.h.blob  @nix@store@4xqa6mk1lllnsprl2swlw94vczzn02y9-clang-19.1.7-lib@lib@clang@19@include@stdint.h.blob  @nix@store@9ds850ifd4jwcccpp3v14818kk74ldf2-gcc-14.2.1.20250322@include@c++@14.2.1.20250322@algorithm.blob  @nix@store@9ds850ifd4jwcccpp3v14818kk74ldf2-gcc-14.2.1.20250322@include@c++@14.2.1.20250322@array.blob  @nix@store@9ds850ifd4jwcccpp3v14818kk74ldf2-gcc-14.2.1.20250322@include@c++@14.2.1.20250322@atomic.blob  @nix@store@9ds850ifd4jwcccpp3v14818kk74ldf2-gcc-14.2.1.20250322@include@c++@14.2.1.20250322@backward@auto_ptr.h.blob  @nix@store@9ds850ifd4jwcccpp3v14818kk74ldf2-gcc-14.2.1.20250322@include@c++@14.2.1.20250322@backward@binders.h.blob  @nix@store@9ds850ifd4jwcccpp3v14818kk74ldf2-gcc-14.2.1.20250322@include@c++@14.2.1.20250322@bit.blob  @nix@store@9ds850ifd4jwcccpp3v14818kk74ldf2-gcc-14.2.1.20250322@include@c++@14.2.1.20250322@bits@algorithmfwd.h.blob  @nix@store@9ds850ifd4jwcccpp3v14818kk74ldf2-gcc-14.2.1.20250322@include@c++@14.2.1.20250322@bits@align.h.blob  @nix@store@9ds850ifd4jwcccpp3v14818kk74ldf2-gcc-14.2.1.20250322@include@c++@14.2.1.20250322@bits@alloc_traits.h.blob  @nix@store@9ds850ifd4jwcccpp3v14818kk74ldf2-gcc-14.2.1.20250322@include@c++@14.2.1.20250322@bits@allocated_ptr.h.blob  @nix@store@9ds850ifd4jwcccpp3v14818kk74ldf2-gcc-14.2.1.20250322@include@c++@14.2.1.20250322@bits@allocator.h.blob  @nix@store@9ds850ifd4jwcccpp3v14818kk74ldf2-gcc-14.2.1.20250322@include@c++@14.2.1.20250322@bits@atomic_base.h.blob  @nix@store@9ds850ifd4jwcccpp3v14818kk74ldf2-gcc-14.2.1.20250322@include@c++@14.2.1.20250322@bits@atomic_lockfree_defines.h.blob  @nix@store@9ds850ifd4jwcccpp3v14818kk74ldf2-gcc-14.2.1.20250322@include@c++@14.2.1.20250322@bits@atomic_wait.h.blob  (+738 more)
src/: errors.cpp  pch.h  report_assertion_failure.cpp
testbed/: app.cpp  mockup.cpp
(+63 files in other folders)
